--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #261461;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
@@ -17,12 +18,17 @@ h2 {
     color: white;
 }
 
+label {
+    font-size: 0.85rem;
+}
+
 #text {
     height: 100%;
     width: 150px;
     border: 1px solid grey;
     border-radius: 3px;
     background-color: #fff7ed;
+    padding: 0 3px;
 }
 
 .top-text-container {
@@ -36,10 +42,12 @@ h2 {
     /* height: 300px; */
     background-color: white;
     margin: 0 auto;
+    border: none;
+    border-radius: 5px;
 }
 
 .form-primary {
-    padding: 20px 20px;
+    padding: 20px;
     width: 80%;
 }
 
