--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,6 +56,7 @@ label {
 }
 
 .btn-reset {
+    padding: 0 3px 2px 3px;
     background-color: unset;
     border-radius: 3px;
     border: 1px solid grey;
@@ -64,4 +65,25 @@ label {
 
 .btn-reset:hover {
     background-color: #ffcfcf;
+}
+
+.btn-refresh {
+    padding: 0 6px 2px 6px;
+    background-color: unset;
+    border-radius: 3px;
+    border: 1px solid grey;
+    cursor: pointer;
+}
+
+.btn-refresh:hover {
+    background-color: #d1cfff;
+}
+
+.user-choice {
+    padding-bottom: 20px;
+}
+
+.choice {
+    font-size: 2rem;
+    color: #f1617e;
 }
