--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -16,6 +16,10 @@
     align-items: center;
 }
 
+.f-justify-center {
+    justify-content: center;
+}
+
 .f-justify-start {
     justify-content: start;
 }
