--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,6 +51,11 @@ label {
     width: 80%;
 }
 
+.form-secondary {
+    padding: 20px;
+    /* width: 100%; */
+}
+
 .inputs {
     width: 180px;
 }
@@ -85,26 +90,42 @@ label {
 }
 
 .user-choice {
-    padding: 150px 75px;
-    width: 600px;
+    border-radius: 25px;
+    padding: 80px 75px;
     text-align: center;
-    background-color: #ffefdc;
+    background-color: #cccad6;
     color: #ed1943;
 }
 
-.user-choice > h4 {
+.pwd-container > h4 {
     color: #0e0e0e;
+    margin-bottom: 15px;
 }
 
 .choice {
+    font-size: 1.5rem;
+    cursor: cell;
+    width: fit-content;
+}
+
+.wrong-choice {
     font-size: 1.5rem;
     color: #ed1943;
 }
 
 .pwd-container {
     margin: 20px 10px;
-    padding: 50px 0;
-    border: 1px solid black;
-    border-radius: 50px;
+    padding: 50px 25px;
+    border: 1px solid grey;
+    border-radius: 25px;
     background-color: #fae6e6;
+    cursor: pointer;
+}
+
+.goback-btn {
+    border: 1px solid grey;
+    border-radius: 5px;
+    padding: 5px 15px;
+    background-color: #b3b3ff;
+    cursor: pointer;
 }
